fix spacings

--- a/src/modules/blog-page-list/style.module.css
+++ b/src/modules/blog-page-list/style.module.css
@@ -1,3 +1,3 @@
 .container {
-    padding: 50px 100px;
+    padding: 40px 100px;
 }
