--- a/src/modules/hiking-page-list/style.module.css
+++ b/src/modules/hiking-page-list/style.module.css
@@ -1,3 +1,3 @@
 .container {
-    padding: 20px 100px;
+    padding: 40px 100px;
 }
